# docs/swagger/swagger.yaml
@@ -76,7 +76,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/v1/cart:
+  /cart:
     get:
       consumes:
       - application/json
@@ -110,7 +110,7 @@ paths:
       summary: Добавление товара в корзину
       tags:
       - carts
-  /api/v1/cart/product/{id}:
+  /cart/product/{id}:
     delete:
       consumes:
       - application/json
@@ -130,7 +130,7 @@ paths:
       summary: Удаление товара из корзины
       tags:
       - carts
-  /api/v1/orders:
+  /orders:
     get:
       consumes:
       - application/json
@@ -182,7 +182,7 @@ paths:
       summary: Изменение статуса заказа
       tags:
       - orders
-  /api/v1/products:
+  /products:
     get:
       consumes:
       - application/json
@@ -196,7 +196,7 @@ paths:
       summary: Просмотр всех товаров
       tags:
       - products
-  /api/v1/statuses:
+  /statuses:
     get:
       consumes:
       - application/json
